BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_ListOfValues__c.object
<CustomObject>
    <description>PK: Created to store list of values for custom fields</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The field is used to specify if the value is Active or not. Only active values will be picked to display in the list.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>The field captures the Code of the corresponding LOV</description>
        <inlineHelpText>The field captures the Code of the corresponding LOV</inlineHelpText>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColAPIName__c</fullName>
        <description>This field stores the Column API Name required for Lookup filters</description>
        <label>Col. API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColName__c</fullName>
        <description>The field stores the field API name of the corresponding Object</description>
        <label>Col Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Capture description of the LOV value</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <description>This field stores the Object API Name to be captured for filters</description>
        <label>Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>This field stores the name of the object</description>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>This holds the sequence in which the values that can be displayed to user when referenced in the source object</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>List Of Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Of Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>